--- a/src/audio/beep/src/beep_registry.arm12.cf.in
+++ b/src/audio/beep/src/beep_registry.arm12.cf.in
@@ -30,3 +30,9 @@ description = Decode Vorbis compressed audio to raw data
 rank = 259
 mime = audio/x-vorbis
 library = @vorbisd_arm12_SONAME@
+
+[ddplus]
+longname = DDplus decoder
+description = Decode Dobly Digital Plus audio to raw data
+mime = audio/eac3
+library = @ddpd_arm12_SONAME@
