--- a/src/audio/amr_enc/src/Makefile.in
+++ b/src/audio/amr_enc/src/Makefile.in
@@ -174,6 +174,8 @@ PKG_CONFIG_LIBDIR = @PKG_CONFIG_LIBDIR@
 PKG_CONFIG_PATH = @PKG_CONFIG_PATH@
 PLATFORM = @PLATFORM@
 RANLIB = @RANLIB@
+RT_CFLAGS = @RT_CFLAGS@
+RT_LIBS = @RT_LIBS@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
@@ -213,6 +215,7 @@ build_vendor = @build_vendor@
 builddir = @builddir@
 datadir = @datadir@
 datarootdir = @datarootdir@
+ddpd_arm12_SONAME = @ddpd_arm12_SONAME@
 docdir = @docdir@
 dvidir = @dvidir@
 exec_prefix = @exec_prefix@
