--- a/tools/gplay/Makefile.am
+++ b/tools/gplay/Makefile.am
@@ -8,7 +8,7 @@ libgplaycore_la_LIBADD = $(GST_LIBS) -lz
 bin_PROGRAMS = gplay
 gplay_SOURCES = mfw_gplay.c playlist.c
 gplay_CFLAGS  = $(GST_CFLAGS) 
-gplay_LDADD   = libgplaycore.la
+gplay_LDADD   = libgplaycore.la -lglib-2.0
 
 noinst_HEADERS = \
     fsl_player_debug.h      \
